# 4JLibs

./: .gitignore
Windows_Libs/Dev/Input/: INP_ForceFeedback.cpp  Input.vcxproj
Windows_Libs/Dev/Profile/: Profile.vcxproj
Windows_Libs/Dev/Render/: 4J_Render.cpp  CMakeLists.txt  Render.vcxproj  Renderer.h  RendererCore.cpp  RendererState.cpp
Windows_Libs/Dev/Render/libpng/: pngwrite.c
Windows_Libs/Dev/Storage/: STO_SaveGame.cpp  Storage.vcxproj  extraX64.h
